# tronmcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: course.rs  game.rs  main.rs  manager.rs  mcp.rs  web.rs
static/: index.html  script.js  style.css
