[package]
name = "tronmcp"
version = "0.1.1"
edition = "2024"

[dependencies]
rmcp = { version = "0.16.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true

# opt-level = 3   # Maximum performance. I don’t care how big it gets. Make it fast.
# opt-level = "z" # Minimum size. I care about binary size more than raw speed.
# opt-level = "s" # Optimize for size, but not as aggressively as "z".